# sf-principal-demo

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
.github/workflows/: linting.yml  tests.yml
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/core/: index.html
core/templates/csv_upload/: csv_display.html
frontend/: package-lock.json  package.json
frontend/src/application/: app.js
frontend/src/styles/: index.scss
sf_django_template/: asgi.py  settings.py  urls.py  wsgi.py
