[tool.poetry]
name = "sf-django-template"
version = "0.1.0"
description = ""
authors = ["Francisco Macedo <francisco.macedo@socialfinance.org.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sf_django_template"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.20"
python-webpack-boilerplate = "^1.0.0"
django-material = "^1.11.3"
python-decouple = "^3.6"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '''
/(
  | migrations
)/
'''

[tool.isort]
profile = "black"
extend_skip = ["migrations"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = "migrations"